# AI_Engineer

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  USER_MANUAL.md  project-index.md  pyproject.toml
aie/: __init__.py
architecture/: README.md
cheatsheets/: README.md  prompt-engineering.md
exercises/: README.md  milestone-1-llm-fundamentals.md  milestone-2-rag.md  milestone-3-agents-mcp.md  milestone-4-evals-observability.md  milestone-5-serving-finetuning.md  milestone-6-capstone.md
interview-prep/: README.md  behavioral.md  llm-fundamentals.md  python-coding.md  system-design.md
notes/: README.md  agents-mcp.md  evals-observability-guardrails.md  rag.md  serving-deployment-finetuning.md
progress/: monthly-plan.md  progress-tracker.md  readiness-scorecard.md  weekly-plan.md
prompt-engineering/: README.md
research-notes/: README.md
resources/: README.md
roadmap/: README.md  milestone-0-setup.md  milestone-1-llm-fundamentals.md  milestone-2-rag.md  milestone-3-agents-mcp.md  milestone-4-evals-observability.md  milestone-5-serving-deploy.md  milestone-6-capstone-interview.md
system-design/: README.md  case-study-multi-agent-support.md  case-study-rag-assistant.md
tests/: test_smoke.py
