[project]
name = "ai-engineer"
version = "0.1.0"
description = "AI Engineer learning ecosystem: knowledge base, roadmap, and shared tooling."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = []

# This repo is a knowledge base, not a published package. We declare it as a
# uv "virtual" project (no build-system) so `uv sync` just provisions the dev
# toolchain into a local environment without trying to build/install it.

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["aie", "tests"]

[tool.ruff.lint]
# A pragmatic, high-signal rule set: pyflakes, pycodestyle, isort, bugbear,
# comprehensions, pyupgrade, and naming.
select = ["E", "F", "I", "B", "C4", "UP", "N", "W"]

[tool.mypy]
python_version = "3.12"
files = ["aie", "tests"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
